compiler/flux-typecheck/src/snapshots/flux_typecheck__tests__parse_function_call_incorrect_arg_types.snap
---
source: compiler/flux-typecheck/src/tests.rs
expression: s
---
error[E0000]: could not unify `i32` and `i13`
  ┌─ main:7:6
  │
1 │ fn foo(i13 x) {
  │        ---- `i13` type
  ·
6 │     i32 y = 0;
  │     ---- `i32` type
7 │     foo(y);
  │         ^ could not unify `i32` and `i13`


